fixed skills wrapping issue + updated comp arch project description

--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ p, span, h1, h2, h3 {
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #1e1e2f; /* Match the background color of the body */
+  background-color: transparent; /* Match the background color of the bod #1e1e2fy */
 }
 
 ::-webkit-scrollbar-thumb {
@@ -43,6 +43,6 @@ p, span, h1, h2, h3 {
 
 /* For Firefox */
 * {
-  scrollbar-color: #a1a1a1 #1e1e2f; /* Light gray thumb, dark track */
+  scrollbar-color: #a1a1a1 transparent; /* Light gray thumb, dark track  #1e1e2f*/
   scrollbar-width: thin; /* Thin scrollbar */
 }
